typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration15.ts.stderr
error: TS2391 {
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration15.ts:2:4
  |
2 |    foo();
  |    ^^^

